add kabsch post

--- a/posts/10112025_kabsch.md
+++ b/posts/10112025_kabsch.md
@@ -62,8 +62,10 @@ In other words, to find the optimal point cloud, we just take the matrix $Y^T X$
 ## Kabsch as a loss function
 A number of recent works have directly used the Kabsch function to optimize generative models. I generally think this is a bad idea, for a couple of reasons I want to outline.
 
-First, backpropagating through an SVD has problems. You don't have enough precision to do it in float16 (though you should probably still be doing this in float32 regardless, so this isn't a major concern). More importantly, in situations where the singular values are very close to each other, every time they cross (which will happen stochastically with optimization) your determinant changes sign. This makes your whole rotation matrix flip around since the determinant changes, so the optimization gets unstable. You can avoid this by explicitly catching the determinant sign flips. The Kabsch alignment is pretty expensive (the SVD is $O(N^3)$), so doing it every forward pass can get annoying. 
+First, backpropagating through an SVD has problems. You don't have enough precision to do it in float16 (though you should probably still be doing this in float32 regardless, so this isn't a major concern). There is a degeneracy with respect to reflections (i.e., the sign of the determinant of the rotation matrix), but you can just catch that and flip it back if you start optimizing in the wrong direction. I have heard people say that it is expensive since the SVD is $O(N^3)$, but $N=3$ so I don't think that actually matters, even on backprop
 
-I've noticed that RMSD approaches seem to often train using both local and global RMSD losses, which I suspect is because the RMSD itself is a global metric. If you differentiate through, I think it probably doesn't devote enough weight to local errors, so you can end up with conformations that are physicall implausible but that have low loss, kind of like how per-pixel reconsructions aren't sufficient to get perceptually good tokenizations. This is a guess, though, and I haven't ablated this explicitly.
+However, I think you _still_ get bad backprop. If you have singular values that are close in magnitude, then small perturbations during optimization can flip the columns of $U$ and $V$, which is equivalent to a large change in your predicted rotation matrix. This gives large jumps in the gradient which are not great for optimization. Similarly, even though you can backprop through the SVD in PyTorch/Jax, the derivative involves terms $\propto (\sigma_i - \sigma_j)^{-1}$. As singular values get close, this causes issues in backpropagation. 
 
-However, there's a more critical issue I see, which is that the RMSD cannot represent multimodal (in the probability distribution sense, not the ML sense) distributions. This is why diffusion losses are nice. If we have two spatial conformations that occur with equal probability, the RMSD will just try to average them down the middle and give you something that's always wrong -- a diffusion loss let's you actually sample from the two conformations. This is an idea that Gabriele Corso first brought up in a talk on [DiffDock](https://arxiv.org/abs/2210.01776) a few years back. Diffusion models often do better than just trying to directly optimize an MSE predictor when there are multiple plausible modes.
+Some more anecdotal data: I've noticed that RMSD approaches seem to often train using both local and global RMSD losses, which I suspect is because the RMSD itself is a global metric. If you differentiate through, I think it probably doesn't devote enough weight to local errors, so you can end up with conformations that are physicall implausible but that have low loss, kind of like how per-pixel reconsructions aren't sufficient to get perceptually good tokenizations. This is a guess, though, and I haven't ablated this explicitly.
+
+To be perfectly honest, the most critical issue in my mind is that the RMSD cannot represent multimodal (in the probability distribution sense, not the ML sense) distributions. This is why diffusion losses are nice. If we have two spatial conformations that occur with equal probability, the RMSD will just try to average them down the middle and give you something that's always wrong -- a diffusion loss let's you actually sample from the two conformations. This is an idea that Gabriele Corso first brought up in a talk on [DiffDock](https://arxiv.org/abs/2210.01776) a few years back. Diffusion models often do better than just trying to directly optimize an MSE predictor when there are multiple plausible modes.
