--- a/posts/10172025_j2.md
+++ b/posts/10172025_j2.md
@@ -3,7 +3,7 @@ title: A thing that didn't work: tokenizer-free autoregressive models
 date: October 17, 2025
 ---
 
-_Everyone always says "yes you should publish negative results," but no one actually does. I'm not going to either, but I'll write some quick blog posts about things that failed._
+_Everyone always says "yes you should publish negative results." I'm going to start posting some things I worked on that failed. Hopefully they're useful for people thinking in similar directions!_
 
 I've been interested in autoregressive models to generate biological structures. There are a variety of reasons to prefer autoregression to discrete or continuous diffusion. The big one in my mind is variable-length sequences. Almost everything that isn't an image has a variable sequence length (audio, video, proteins, sentences, time series, etc.), and the sequence length is often actually important to the task at hand. Fixing the sequence length and generating using a predefined template may help with doing well on benchmarks, but I think the bill comes due in the wild. A more evocative view is we want to build truly multimodal models that can perceive biology using a variety of signals, and having to say "okay but the protein is 67 residues long" is a bit constraining. 
 
